Added surefire plugin version 3.0.0.M4, changed deprecated new Integer().